refactor : path alias 적용

--- a/front/package.json
+++ b/front/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
     "styled-components": "^6.0.6",
-    "styled-reset": "^4.5.1"
+    "styled-reset": "^4.5.1",
+    "vite-jsconfig-paths": "^2.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
