--- a/backend/boot-loader/build.gradle
+++ b/backend/boot-loader/build.gradle
@@ -4,12 +4,14 @@ buildscript {
     }
 }
 
+
 plugins {
     id 'java'
     id 'org.springframework.boot' version '2.7.14'
     id 'io.spring.dependency-management' version '1.0.15.RELEASE'
     id 'com.epages.restdocs-api-spec' version "${restdocsApiSpecVersion}"
     id 'org.hidetake.swagger.generator' version '2.18.2'
+    id "org.sonarqube" version "4.2.1.3168"
 }
 
 group = 'com.poongcha'
@@ -34,6 +36,14 @@ openapi3 {
 swaggerSources {
     sample {
         setInputFile(file("${project.buildDir}/api-spec/openapi3.yaml"))
+    }
+}
+
+sonar {
+    properties {
+        property "sonar.projectKey", "softeerbootcamp-2nd_A1-PoongCha"
+        property "sonar.organization", "softeer"
+        property "sonar.host.url", "https://sonarcloud.io"
     }
 }
 
