--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -57,6 +57,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: sudo ./gradlew build -Pprofile=test sonar --info
+        run: sudo ./gradlew build sonarqube
         working-directory: backend/boot-loader/
         shell: bash
