--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -1,11 +1,11 @@
-name: Frontend CI/CD
+name: Frontend CI
 
 on:
-  push:
+  pull_request:
     branches: [ front ]
 
 jobs:
-  frontend-cicd:
+  frontend-ci:
     runs-on: ubuntu-latest
     steps:
       - name: 👋 Checkout
@@ -37,16 +37,3 @@ jobs:
         run: npm run build
         working-directory: front
         shell: bash
-
-      - name: 🔑 Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ap-northeast-2
-
-      - name: 🗄️ Upload to S3
-        env:
-          REGION: ap-northeast-2
-          S3_NAME: my-car-store-front
-        run: aws s3 cp --recursive --region ap-northeast-2 front/dist/ s3://$S3_NAME/
