fix: 변경된 S3 버킷으로 업로드 되게 함

--- a/.github/workflows/frontend-cicd.yml
+++ b/.github/workflows/frontend-cicd.yml
@@ -48,5 +48,5 @@ jobs:
       - name: 🗄️ Upload to S3
         env:
           REGION: ap-northeast-2
-          S3_NAME: my-car-store-front
+          S3_NAME: my-car.store
         run: aws s3 cp --recursive --region ap-northeast-2 front/dist/ s3://$S3_NAME/
