fix: 환경변수 작성 형식 수정

--- a/backend/boot-loader/src/main/resources/application-prod.yml
+++ b/backend/boot-loader/src/main/resources/application-prod.yml
@@ -2,11 +2,11 @@ spring:
   datasource:
     car:
       driver-class-name: com.mysql.cj.jdbc.Driver
-      url: ${{car-default-database-url}}
-      username: ${{car-default-database-username}}
-      password: ${{car-default-database-password}}
+      url: ${{ secrets.CAR_DEFAULT_DATABASE_URL }}
+      username: ${{ secrets.CAR_DEFAULT_DATABASE_USERNAME }}
+      password: ${{ secrets.CAR_DEFAULT_DATABASE_PASSWORD }}
     recommend:
       driver-class-name: com.mysql.cj.jdbc.Driver
-      url: ${{recommend-default-database-url}}
-      username: ${{recommend-default-database-username}}
-      password: ${{recommend-default-database-password}}
+      url: ${{ secrets.RECOMMEND_DEFAULT_DATABASE_URL }}
+      username: ${{ secrets.RECOMMEND_DEFAULT_DATABASE_USERNAME }}
+      password: ${{ secrets.RECOMMEND_DEFAULT_DATABASE_PASSWORD }}
