fix: 배포 시 prod 프로필로 빌드되도록 변경

--- a/.github/workflows/backend-cicd.yml
+++ b/.github/workflows/backend-cicd.yml
@@ -45,7 +45,7 @@ jobs:
         shell: bash
 
       - name: 🛠 Build with Gradle
-        run: sudo ./gradlew build
+        run: sudo ./gradlew build -x test -Pprofile=prod
         working-directory: backend/boot-loader/
         shell: bash
 
