--- a/backend/recommend/src/main/resources/application-prod.yml
+++ b/backend/recommend/src/main/resources/application-prod.yml
@@ -2,6 +2,6 @@ spring:
   datasource:
     recommend:
       driver-class-name: com.mysql.cj.jdbc.Driver
-      url: ${{ secrets.RECOMMEND_DEFAULT_DATABASE_URL}}
-      username: ${{ secrets.RECOMMEND_DEFAULT_DATABASE_USERNAME }}
-      password: ${{ secrets.RECOMMEND_DEFAULT_DATABASE_PASSWORD }}
+      url: ${RECOMMEND_DEFAULT_DATABASE_URL}
+      username: ${RECOMMEND_DEFAULT_DATABASE_USERNAME}
+      password: ${RECOMMEND_DEFAULT_DATABASE_PASSWORD}
