--- a/backend/car/src/main/resources/application-prod.yml
+++ b/backend/car/src/main/resources/application-prod.yml
@@ -2,6 +2,6 @@ spring:
   datasource:
     car:
       driver-class-name: com.mysql.cj.jdbc.Driver
-      url: ${{ secrets.CAR_DEFAULT_DATABASE_URL }}
-      username: ${{ secrets.CAR_DEFAULT_DATABASE_USERNAME }}
-      password: ${{ secrets.CAR_DEFAULT_DATABASE_PASSWORD }}
+      url: ${CAR_DEFAULT_DATABASE_URL}
+      username: ${CAR_DEFAULT_DATABASE_USERNAME}
+      password: ${CAR_DEFAULT_DATABASE_PASSWORD}
