--- a/backend/boot-loader/src/main/resources/application-prod.yml
+++ b/backend/boot-loader/src/main/resources/application-prod.yml
@@ -2,11 +2,11 @@ spring:
   datasource:
     car:
       driver-class-name: com.mysql.cj.jdbc.Driver
-      url: ${{ secrets.CAR_DEFAULT_DATABASE_URL }}
-      username: ${{ secrets.CAR_DEFAULT_DATABASE_USERNAME }}
-      password: ${{ secrets.CAR_DEFAULT_DATABASE_PASSWORD }}
+      url: ${CAR_DEFAULT_DATABASE_URL}
+      username: ${CAR_DEFAULT_DATABASE_USERNAME}
+      password: ${CAR_DEFAULT_DATABASE_PASSWORD}
     recommend:
       driver-class-name: com.mysql.cj.jdbc.Driver
-      url: ${{ secrets.RECOMMEND_DEFAULT_DATABASE_URL }}
-      username: ${{ secrets.RECOMMEND_DEFAULT_DATABASE_USERNAME }}
-      password: ${{ secrets.RECOMMEND_DEFAULT_DATABASE_PASSWORD }}
+      url: ${RECOMMEND_DEFAULT_DATABASE_URL}
+      username: ${RECOMMEND_DEFAULT_DATABASE_USERNAME}
+      password: ${RECOMMEND_DEFAULT_DATABASE_PASSWORD}
