build: skiptest 변수를 입력해 빌드 시 테스트를 스킵할 수 있게 함

--- a/backend/boot-loader/build.gradle
+++ b/backend/boot-loader/build.gradle
@@ -23,6 +23,8 @@ repositories {
     mavenCentral()
 }
 
+test.onlyIf { !project.hasProperty('skiptest') }
+
 openapi3 {
     setServer("http://localhost:8080")
     title = "내 차 만들기 API 명세서"
