build: 배포용으로 빌드 시 테스트 스킵

--- a/.github/workflows/backend-cicd.yml
+++ b/.github/workflows/backend-cicd.yml
@@ -45,7 +45,7 @@ jobs:
         shell: bash
 
       - name: 🛠 Build with Gradle
-        run: sudo ./gradlew build -x test -Pprofile=prod
+        run: sudo ./gradlew build -x test -Pprofile=prod -Dskiptest
         working-directory: backend/boot-loader/
         shell: bash
 
