--- a/backend/boot-loader/src/main/resources/application-test.yml
+++ b/backend/boot-loader/src/main/resources/application-test.yml
@@ -10,3 +10,9 @@ spring:
       url: jdbc:mysql://localhost:3306/recommend
       username: root
       password: 1234
+
+module:
+  car:
+    protocol: http
+    host: localhost
+    port: 8080
