--- a/backend/boot-loader/src/main/resources/application-prod.yml
+++ b/backend/boot-loader/src/main/resources/application-prod.yml
@@ -10,3 +10,9 @@ spring:
       url: ${{ secrets.RECOMMEND_DEFAULT_DATABASE_URL }}
       username: ${{ secrets.RECOMMEND_DEFAULT_DATABASE_USERNAME }}
       password: ${{ secrets.RECOMMEND_DEFAULT_DATABASE_PASSWORD }}
+
+module:
+  car:
+    protocol: ${{ secrets.MODULE_CAR_PROTOCOL}}
+    host: ${{ secrets.MODULE_CAR_HOST}}
+    port: ${{ secrets.MODULE_CAR_PORT}}
