--- a/backend/recommend/src/main/resources/application-local.yml
+++ b/backend/recommend/src/main/resources/application-local.yml
@@ -5,3 +5,9 @@ spring:
       url: jdbc:mysql://localhost:3306/recommend
       username: root
       password: 1234
+
+module:
+  car:
+    protocol: http
+    host: localhost
+    port: 8080
