fix: prod 프로필로 서버 실행되도록 수정

--- a/backend/boot-loader/src/main/resources/application-prod.yml
+++ b/backend/boot-loader/src/main/resources/application-prod.yml
@@ -7,12 +7,12 @@ spring:
       password: ${CAR_DEFAULT_DATABASE_PASSWORD}
     recommend:
       driver-class-name: com.mysql.cj.jdbc.Driver
-      url: ${{ secrets.RECOMMEND_DEFAULT_DATABASE_URL }}
-      username: ${{ secrets.RECOMMEND_DEFAULT_DATABASE_USERNAME }}
-      password: ${{ secrets.RECOMMEND_DEFAULT_DATABASE_PASSWORD }}
+      url: ${RECOMMEND_DEFAULT_DATABASE_URL}
+      username: ${RECOMMEND_DEFAULT_DATABASE_USERNAME}
+      password: ${RECOMMEND_DEFAULT_DATABASE_PASSWORD}
 
 module:
   car:
-    protocol: ${{ secrets.MODULE_CAR_PROTOCOL}}
-    host: ${{ secrets.MODULE_CAR_HOST}}
-    port: ${{ secrets.MODULE_CAR_PORT}}
+    protocol: ${MODULE_CAR_PROTOCOL}
+    host: ${MODULE_CAR_HOST}
+    port: ${MODULE_CAR_PORT}
